--- a/README
+++ b/README
@@ -2,6 +2,7 @@ Device configuration for the Samsung Galaxy Note 8.0 (LTE)
 GT-N5120
 
 Copyright (C) 2013 The CyanogenMod Project
+Copyright (C) 2014 Paranoid Android
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
